--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
   <title>Nirbhay Sharma</title>
   <link href="styles.css" rel="stylesheet">
 </head>
